apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/Apex_Trigger_Handler_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Apex Trigger Handler Setting</label>
    <pluralLabel>Apex Trigger Handler Settings</pluralLabel>
</CustomObject>