apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <label>Execution Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>