apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>