apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>