apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>