apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <default>true</default>
                <label>BEFORE_INSERT</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>