apex-trigger-loader/main/default/objects/Apex_Trigger_Handler_Setting__mdt/listViews/All_Handlers.listView-meta.xml
<ListView>
    <fullName>All_Handlers</fullName>
    <columns>MasterLabel</columns>
    <columns>SObject__c</columns>
    <columns>Trigger_Event__c</columns>
    <columns>Handler_Class__c</columns>
    <columns>Execution_Order__c</columns>
    <columns>Tag__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Handlers</label>
</ListView>